# strands-env

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: run-integration-tests.md
.github/workflows/: publish.yml
docs/: evaluation.md
examples/: aime_eval.py  bedrock_judge_demo.py  calculator_demo.py  common.py  math_env.py  web_search_demo.py
examples/envs/: calculator_env.py  code_sandbox_env.py
examples/eval/aime_code/: README.md  code_sandbox_env.py
examples/eval/simple_math/: README.md  calculator_env.py
src/strands_env/cli/: __init__.py  config.py  eval.py  utils.py
src/strands_env/core/: models.py
src/strands_env/environments/: __init__.py
src/strands_env/environments/calculator/: env.py
src/strands_env/environments/code_sandbox/: env.py
src/strands_env/environments/mcp/agentworldmodel/: README.md  __init__.py  env.py  reward.py
src/strands_env/eval/: __init__.py  aime.py  evaluator.py  registry.py
src/strands_env/eval/benchmarks/: __init__.py  aime.py  terminal_bench.py
src/strands_env/rewards/: __init__.py  llm_judge_reward.py  math_reward.py
src/strands_env/tools/: __init__.py  code_interpreter.py  google_search.py  web_scraper.py  web_search.py
src/strands_env/utils/: __init__.py  aws.py  sglang.py
tests/integration/: test_code_sandbox.py  test_math_env.py  test_terminal_bench.py
tests/unit/: test_aws.py  test_environment.py  test_eval.py  test_math_reward.py  test_models.py  test_registry.py
