[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-env"
version = "0.0.1.dev0"
description = "RL environment abstraction for Strands agents — step, observe, reward."
authors = [{name = "Yuan He", email = "yuanhe.cs.ai@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "strands-sglang>=0.1.1",
    "strands-agents-tools",
    "tiktoken",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    # Linting & Build
    "pre-commit",
    "ruff>=0.1.0",
    "twine>=4.0.0",
    "build>=0.10.0",
    # Development
    "ipykernel>=7.1.0",
    "kubernetes>=35.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strands_env"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
